kubernetes/argocd-init/argocd/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    # - web       # Receive requests on port 80
    - websecure   # Receive requests on port 443
  routes:
    - match: Host(`argocd.lab.net`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
